# gitlab-links

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/mdx_gitlab_links/: __init__.py
tests/: test_mdx_gitlab_links.py
